--- a/uboot/drivers/net/Makefile
+++ b/uboot/drivers/net/Makefile
@@ -22,8 +22,8 @@
 #
 
 include $(TOPDIR)/config.mk
-CPPFLAGS += -I$(TOPDIR)/board/qcom/ipq40xx_cdp -I$(TOPDIR)/board/qcom/common
-CFLAGS += -I$(TOPDIR)/board/qcom/ipq40xx_cdp -I$(TOPDIR)/board/qcom/common
+CPPFLAGS += -I$(TOPDIR)/board/qcom/ipq806x_cdp -I$(TOPDIR)/board/qcom/common
+CFLAGS += -I$(TOPDIR)/board/qcom/ipq806x_cdp -I$(TOPDIR)/board/qcom/common
 
 LIB	:= $(obj)libnet.o
 
